# Jac_Ai

./: .gitignore  README.md  app.py  constants.py  requirements.txt  server.py
.github/workflows/: python-package.yml
Logic/: Jacob The Accountant (AI).xmind
core-api/: main.py  pyproject.toml
core-api/core_api/configurations/: menu_config.py
core-api/core_api/handlers/: accounts.py  expenses.py
core-api/core_api/mappers/: accounts.py  expenses.py
core-api/core_api/models/: accounts.py  expenses.py
core-api/core_api/routers/: accounts.py  expenses.py
core-api/core_api/services/: accounts.py  expenses.py
desktop_app/: JAC_AI.py
desktop_app/Configurations/: menu_config.py
desktop_app/Designs/: images.qrc  jac_ai.ui
documentations/: JAC AI API Server.xmind  Jac_Ai.xmind
mappers/: expenses.py
models/: expenses.py  savings.py
