[tool.poetry]
name = "core-api"
version = "0.1.0"
description = ""
authors = ["Developer Akhil Jacob"]
readme = "README.md"
packages = [{include = "core_api"}]

[tool.poetry.dependencies]
python = "^3.10.11"
fastapi = "0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "2.3.0"
toml = "^0.10.2"
platformdirs = "^3.11.0"
appdirs = "^1.4.4"
urllib3 = "2.0.6"
bcrypt = "^4.0.1"
pydantic-settings = "^2.0.3"
boto3 = "1.34.69"


[tool.poetry.group.dev.dependencies]
black = "23.7.0"
mypy = "1.5.1"
pytest = "7.4.0"
flake8 = "3.9.2"
pre-commit = "3.5.0"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
